# improve-writing

./: CLAUDE.md  Cargo.toml  README.md
src/: event_loop.rs  input.rs  main.rs  ollama.rs  output.rs
