[package]
name = "improve-writing"
version = "0.1.0"
edition = "2024"
description = "Hotkey-triggered text improvement via Ollama"

[dependencies]
hotkey-listener = "0.3"
ollama-rs = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
ctrlc = "3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

